--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,12 @@ go.work
 bak/
 src/
 pkg
+pkg.off
+pkg.old
 test/src
+test/pkg
+test/pkg.off
+test/pkg.old
 test/history
 test/hashdb
 test/nntp-history-test
