--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,8 @@ pkg
 pkg.off
 pkg.old
 test/src
+test/src.off
+test/src.old
 test/pkg
 test/pkg.off
 test/pkg.old
@@ -38,3 +40,5 @@ test/test*
 test/bak*
 test/*.pprof.*
 testARENAS
+vendor
+test/vendor
